--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,6 +17,7 @@
       url={https://arxiv.org/abs/2311.12857},
       html={https://arxiv.org/abs/2311.12857},
       pdf={https://arxiv.org/pdf/2311.12857v1.pdf},
+      code={https://github.com/OfficialBishal/GeomMaskAttack},
       preview={spot.gif},
       selected={true}
 }
